<resources>
    <string name="app_name">My Chat</string>
    <string name="login">Login</string>
    <string name="login_to_continue_using_the_app">Login to continue using the app</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_personal_information">Enter your personal information</string>
    <string name="username">Username</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="okay">Okay</string>
    <string name="failed_to_send_authentication_email_try_again">Failed to send authentication email to your email address, try again.</string>
    <string name="an_authentication_email_has_been_sent_to_your_email_address">An authentication email has been sent to your email address.\nPlease follow the link in your email to verify that it\'s your email account.</string>
    <string name="continue_">Continue</string>
    <string name="after_verifying_using_the_link">After verifying using the link, please press the continue button to continue using this app.</string>
    <string name="don_t_worry_it_occurs">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="find_using_email_address">Find user using email address</string>
    <string name="add_user">Add user</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="default_notification_channel_id">firebase_notification_channel</string>
</resources>