<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.exoleviathan.mychat.auth.viewmodel.UserLoginViewModel" />

        <variable
            name="viewModel"
            type="UserLoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ui.UserLoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/app_icon_layout"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/auth_icon_background_rounded"
                    android:importantForAccessibility="no"
                    android:padding="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_auth" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/app_icon_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/title_text_color"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_continue_using_the_app"
                    android:textColor="@color/subtitle_text_color"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/title_text_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <EditText
                    android:id="@+id/email_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/enter_your_email"
                    android:inputType="text|textEmailAddress"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:text="@={viewModel.emailText}" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/title_text_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/password_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/enter_your_password"
                        android:inputType="text|textPassword"
                        android:singleLine="true"
                        android:text="@={viewModel.passwordText}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/password_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="13dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/icon_visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/password_text_field"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/divider_color"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selected_rounded"
                    android:paddingVertical="14dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/color_secondary"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_unselected_rounded"
                    android:paddingVertical="14dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/title_text_color"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>