<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.exoleviathan.mychat.auth.viewmodel.ForgotPasswordViewModel" />

        <variable
            name="viewModel"
            type="ForgotPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ui.ForgotPasswordFragment">

        <LinearLayout
            android:id="@+id/app_icon_layout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/auth_icon_background_rounded"
                android:importantForAccessibility="no"
                android:padding="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_auth" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/app_icon_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/title_text_color"
                android:textSize="27sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_worry_it_occurs"
                android:textColor="@color/subtitle_text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/title_text_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <EditText
                android:id="@+id/email_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_email"
                android:inputType="text|textEmailAddress"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:text="@={viewModel.emailText}" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selected_rounded"
                android:paddingVertical="14dp"
                android:text="@string/send_reset_link"
                android:textAllCaps="false"
                android:textColor="@color/color_secondary"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
