<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.emailverification.EmailVerificationFragment">

    <LinearLayout
        android:id="@+id/app_icon_layout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/auth_icon_background_rounded"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_auth" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon_layout">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_icon_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/failed_to_send_authentication_email_try_again"
            android:textColor="@color/title_text_color"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selected_rounded"
            android:paddingHorizontal="45dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/color_secondary"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/continue_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@+id/app_icon_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an_authentication_email_has_been_sent_to_your_email_address"
            android:textColor="@color/title_text_color"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_verifying_using_the_link"
            android:textColor="@color/title_text_color"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selected_rounded"
            android:paddingHorizontal="45dp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/color_secondary"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>